@@ -59,6 +59,8 @@
 "Delete":"",
 "Delete '%1'?":"",
 "Delete alarm?":"",
+"Delete all selected items":"",
+"Delete the selected items?":"",
 "Display technical info":"",
 "Don't know how to handle this!":"",
 "Don't shuffle":"",
@@ -156,9 +158,11 @@
 "Remote Libraries":"",
 "Remove":"",
 "Remove '%1' from favorites?":"",
+"Remove all selected items":"",
 "Remove all tracks from queue?":"",
 "Remove from favorites":"",
 "Remove from queue":"",
+"Remove the selected items?":"",
 "Rename":"",
 "Rename failed":"",
 "Rename favorite":"",
