@@ -1,10 +1,13 @@
 {
 "%1 minutes":"%1 Minuten",
+"(Currently only 'SB Player' is supported.)":"(Im Moment wird nur 'SB Player' unterstützt.)",
 "Add":"Hinzufügen",
 "Add Favorite":"Favorit hinzufügen",
 "Add URL":"URL hinzufügen",
 "Add a URL to play queue":"URL zu Wiedergabeliste hinzufügen",
 "Add favorite":"Favorit hinzufügen",
+"Add menu option to start player":"Füge Menü Option zum Starten des Players hinzu",
+"Add option to main menu to launch player.":"Füge dem Hauptmenü einen Eintrag zum Starten des Players hinzu.",
 "Add selection to queue":"Auswahl an Warteschlange anhängen",
 "Add to favorites":"In Favoriten speichern",
 "Added to favorites":"Favorit wurde gespeichert",
@@ -161,6 +164,7 @@
 "Scroll play queue when current track changes.":"Wiedergabeliste aktualisieren wenn Titel wechselt.",
 "Scroll to current track":"Zum aktuellen Titel springen",
 "Search":"Suche",
+"Search library":"Sammlung durchsuchen",
 "Select":"Auswählen",
 "Select All":"Alle wählen",
 "Select multiple items":"Mehrere Einträge auswählen",
@@ -205,6 +209,7 @@
 "Sound":"Weckton",
 "Split artist (and album) lists into A..Z":"Interpreten und Alben in Listen A...Z unterteilen",
 "Standard Players":"Standard Gerät",
+"Start player":"Player starten",
 "Start time":"Startzeit",
 "Stop":"Stopp",
 "Stop button":"Stop Knopf",
@@ -279,12 +284,11 @@
 "%1 Years":"%1 Jahre",
 "1 day":"Ein Tag",
 "%1 days":"%1 Tage",
-"(Currently only 'SB Player' is supported.)":"(Im Moment wird nur 'SB Player' unterstützt.)",
-"Add menu option to start player":"Füge Menü Option zum Starten des Players hinzu",
-"Add option to main menu to launch player.":"Füge dem Hauptmenü einen Eintrag zum Starten des Players hinzu.",
 "Album Mix":"",
 "Audio":"",
 "CD Player":"",
+"Delete all selected items":"",
+"Delete the selected items?":"",
 "Dynamic Playlists":"",
 "Firmware: %1":"",
 "IP: %1":"",
@@ -296,8 +300,8 @@
 "Player":"",
 "Plugins":"",
 "Radio":"",
-"Search library":"Sammlung durchsuchen",
+"Remove all selected items":"",
+"Remove the selected items?":"",
 "Start":"",
-"Start player":"Player starten",
 "URL":""
 }
