@@ -67,6 +67,8 @@
 "Delete":"",
 "Delete '%1'?":"",
 "Delete alarm?":"",
+"Delete all selected items":"",
+"Delete the selected items?":"",
 "Display technical info":"",
 "Don't know how to handle this!":"",
 "Don't shuffle":"",
@@ -159,8 +161,10 @@
 "Remaining duration of current track":"",
 "Remote Libraries":"",
 "Remove":"",
+"Remove all selected items":"",
 "Remove all tracks from queue?":"",
 "Remove from queue":"",
+"Remove the selected items?":"",
 "Rename":"",
 "Rename failed":"",
 "Rename playlist":"",
