@@ -154,6 +154,8 @@
 "Compilations":"",
 "Create Group Player":"",
 "Create group":"",
+"Delete all selected items":"",
+"Delete the selected items?":"",
 "Display technical info":"",
 "Don't update information when song changes":"",
 "Draw background":"",
@@ -208,6 +210,8 @@
 "Random Albums":"",
 "Remaining duration of current track":"",
 "Remote Libraries":"",
+"Remove all selected items":"",
+"Remove the selected items?":"",
 "Repeat queue":"",
 "Repeat single track":"",
 "Rescan":"",
