@@ -5,6 +5,7 @@
 3. When using ["<app>", "playlist", "add/insert/play", "menu:<app>",...] and
    have a favorites_url, then replace with ["playlist, "add/insert/play",
    "favorites_url"]. Fixes SoundCloud.
+4. Allow multiple favourites and playlists to be removed/deleted.
 
 0.3.2
 -----
